[package]
name = "molecule"
version = "0.1.0"
edition = "2021"

[dependencies]
bit_field = "0.10.2"
bitflags = "2.8.0"
dummy-alloc = "0.1.0"
limine = "0.3.1"
log = "0.4.25"
spin = { version = "0.9.8", default-features = false, features = [
    "spin_mutex",
    "rwlock",
    "once",
] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
